--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
 						<br>
 						<div class="ui labels" style="margin-top:15px">
-							<a class="ui label" href="mailto:kimauk@kaist.ac.kr" target="_blank"></i>kimauk@kaist.ac.kr</a> |
-							<a class="ui label" href="./file/CV_AukKim.pdf" target="_blank"></i>CV</a> |
+							<a class="ui label" href="mailto:kimauk@gmail.com" target="_blank"></i>kimauk@kaist.ac.kr</a> |
+							<a class="ui label" href="https://docs.google.com/document/d/1pwR4VtFH5ifV_W_lMsAisfupnHwliurHJaziSi5mrFY/edit?usp=sharing" target="_blank"></i>CV</a> |
 							<a class="ui label" href="https://scholar.google.co.kr/citations?user=sI0qT0MAAAAJ&hl=en" target="_blank">Google Scholar</a>
 						</div>
 
