--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 						<br>
 						<div class="ui labels" style="margin-top:15px">
-							<a class="ui label" href="mailto:kimauk@gmail.com" target="_blank"></i>kimauk@kaist.ac.kr</a> |
+							<a class="ui label" href="mailto:kimauk@gmail.com" target="_blank"></i>kimauk@gmail.com</a> |
 							<a class="ui label" href="https://docs.google.com/document/d/1pwR4VtFH5ifV_W_lMsAisfupnHwliurHJaziSi5mrFY/edit?usp=sharing" target="_blank"></i>CV</a> |
 							<a class="ui label" href="https://scholar.google.co.kr/citations?user=sI0qT0MAAAAJ&hl=en" target="_blank">Google Scholar</a>
 						</div>
@@ -172,49 +172,40 @@
 						<tr>
 							<td class="year">2019</td>
 							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3328910" target="_blank"><span class="text-primary">"Multi-Stage Receptivity Model for Mobile Just-In-Time Health Intervention"</span></a>
+								<a href="https://www.sciencedirect.com/science/article/abs/pii/S0360131519301034" target="_blank">
+									<span class="text-primary">"Learning to be Better at the game: Performance vs. completion contingent reward for game-based learning."</span></a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/imwut2019_multi.pdf" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/ComEdu19_Learning.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT), Vol 3, Issue 2, Article No. 39 (June 2019). ACM</em><br>
-								Woohyeok Choi, <strong>Sangkeun Park</strong>, Duyeon Kim, Youn-kyung Lim, Uichin Lee.
+								<em>Computers & Education, Volume 139, 1-15 (October 2019). Pergamon</em><br>
+								Juneyoung Park, Seunghyun Kim, <strong>Auk Kim</strong>, Mun Y. Yi.
 							</td>
 						</tr>
 						<tr>
 							<td class="year">2018</td>
 							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3274403" target="_blank"><span class="text-primary">"CampusWatch: Exploring Communitysourced Patrolling with Pervasive Mobile Technology"</span></a>
+								<a href="https://dl.acm.org/citation.cfm?id=3287053" target="_blank">
+									<span class="text-primary">"Interrupting Drivers for Interactions: Predicting Opportune Moments for In-vehicle Proactive Auditory-verbal Tasks."</span></a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/cscw2018_campuswatch.pdf" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/IMWUT18_Interruptibility.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Proceedings of the ACM on Human-Computer Interaction (PACMHCI), Vol.2, Issue CSCW, Article No. 134 (November 2018). ACM</em><br>
-								<strong>Sangkeun Park</strong>, Sujin Kwon, Uichin Lee.
+								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 2, Issue 4 (December 2018). ACM</em><br>
+								<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee.
 							</td>
 						</tr>
 						<tr>
-							<td class="year">2018</td>
+							<td class="year">2016</td>
 							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3274299" target="_blank"><span class="text-primary">"Complex and Ambiguous: Understanding Sticker Misinterpretations in Instant Messaging"</span></a>
+								<a href="https://www.sciencedirect.com/science/article/pii/S0747563216303119" target="_blank">
+									<span class="text-primary">"Comfortable with friends sharing your picture on Facebook? - Effects of closeness and ownership on picture sharing preference."</span></a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/cscw2018_sticker.pdf" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/CnHM16_PhotoSharing.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Proceedings of the ACM on Human-Computer Interaction (PACMHCI), Vol.2, Issue CSCW, Article No. 30 (November 2018). ACM</em><br>
-								Yoonjeong Cha, Jongwon Kim, <strong>Sangkeun Park</strong>, Mun Yong Yi, Uichin Lee.
-							</td>
-						</tr>
-						<tr>
-							<td class="year">2018</td>
-							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=2983645" target="_blank"><span class="text-primary">"Localness of Location-based Knowledge Sharing: A Study of Naver KiN 'Here'"</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/tweb2018_localness.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>ACM Transactions on the Web (TWEB) Volume 12, Issue 3, Article No. 16 (July 2018)</em><br>
-								<strong>Sangkeun Park</strong>, Mark S. Ackerman, Uichin Lee.
+								<em>Computers in Human Behavior, Volume 62 (September 2016). ACM</em><br>
+								<strong>Auk Kim</strong>, Gahgene Gweon.
 							</td>
 						</tr>
 					</tbody>
@@ -228,81 +219,99 @@
 						<tr>
 							<td class="year">2017</td>
 							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3025867" target="_blank"><span class="text-primary">"Facilitating Pervasive Community Policing on the Road with Mobile Roadwatch."</span></a>
+								<a href="https://dl.acm.org/citation.cfm?id=3025693" target="_blank">
+									<span class="text-primary">"LetsPic: Supporting In-situ Collaborative Photography over a Large Physical Space."</span></a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/chi2017_roadwatch.pdf" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI17_LetsPic.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’17)</em><br>
-								<strong>Sangkeun Park</strong>, Emilia-Stefania Ilincai, Jeungmin Oh, Sujin Kwon, Rabeb Mizouni, Uichin Lee.
-							</td>
-						</tr>
-						<tr>
-							<td class="year">2016</td>
-							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=2858581" target="_blank"><span class="text-primary">“Motives and Concerns of Dashcam Video Sharing.”</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/chi2016_dashcam.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’16)</em><br>
-								<strong>Sangkeun Park</strong>, Joohyun Kim, Rebab Mizouni, Uichin Lee.
+								<strong>Auk Kim</strong>, Sungjoon Kang, Uichin Lee.
 							</td>
 						</tr>
 						<tr>
 							<td class="year">2014</td>
 							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=2628407" target="_blank"><span class="text-primary">“Understanding Localness of Knowledge Sharing.”</span></a>
+								<a href="https://dl.acm.org/citation.cfm?id=3025693" target="_blank">
+									<span class="text-primary">"Photo Sharing of the Subject, by the Owner, for the Viewer – Examining the Subject’s Preference."</span></a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/mobilehci2014_naverkin.pdf" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI14_PhotoSharing.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em style="letter-spacing:-0.2px;">Proceedings	of the ACM International Conference on Human-computer Interaction with Mobile Devices & Services (MobileHCI '14)</em><br>
-								<strong>Sangkeun Park</strong>, Yongsung Kim, Mark S. Ackerman, Uichin Lee.
+								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’14)</em><br>
+								<strong>Auk Kim</strong>, Gahgene Gweon.
 							</td>
 						</tr>
 					</tbody>
 				</table>
 
 				<br>
-
 				<h5>REFEREED POSTERS & EXTENDED ABSTRACTS</h5>
 				<table class="table table-hover">
 					<tbody>
 						<tr>
+							<td class="year">2019</td>
+							<td class="publication">
+								<a href="https://dl.acm.org/citation.cfm?id=3343841" target="_blank">
+									<span class="text-primary">"Predicting Opportune Moments for In-vehicle Proactive Speech Services."</span></a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp19_DriverInterruptibility.pdf" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Proceedings of the 2019 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’19 Poster)</em><br>
+								<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee.
+							</td>
+						</tr>
+						<tr>
+							<td class="year">2018</td>
+							<td class="publication">
+								<a href="https://dl.acm.org/citation.cfm?id=3267616" target="_blank">
+									<span class="text-primary">"HelloBot: Facilitating Social Inclusion with an Interactive Greeting Robot."</span></a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp18_HelloBot.pdf" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Proceedings of the 2018 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’18 Poster)</em><br>
+								Narae Cha, Inyeop Kim, Mingyu Park, <strong>Auk Kim</strong>, Uichin Lee.
+							</td>
+						</tr>
+						<tr>
+							<td class="year">2018</td>
+							<td class="publication">
+								<a href="https://dl.acm.org/citation.cfm?id=3267625" target="_blank">
+									<span class="text-primary">"Understanding Customers' Interests in the Wild."</span></a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp18_CustomerInterest.pdf" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Proceedings of the 2018 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’18 Poster)</em><br>
+								Soowon Kang, <strong>Auk Kim</strong>, Jemin Lee, Ikhee Shin, Uichin Lee.
+							</td>
+						</tr>
+						<tr>
 							<td class="year">2017</td>
 							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3053188" target="_blank"><span class="text-primary">"WatchOut: Facilitating Safe Driving Behaviors with Social Support."</span></a>
+								<a href="https://dl.acm.org/citation.cfm?id=3053199" target="_blank">
+									<span class="text-primary">"It's More than Just Sharing Game Play Videos! Understanding User Motives in Mobile Game Social Media."</span></a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/chi2017_watchout.pdf" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI17_GameDuck.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’17 Work-in-Progress)</em><br>
-								Hyojin Chin, Hengameh Zabihi, <strong>Sangkeun Park</strong>, Mun Yong Yi, Uichin Lee.
+								<em>Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems (CHI ’17  Works-in-Progress)</em><br>
+								Hayun Kim, Lebogang Wame Molefi, <strong>Auk Kim</strong>, Woontack Woo, Aviv Segev, Uichin Lee.
 							</td>
 						</tr>
 						<tr>
-							<td class="year">2016</td>
+							<td class="year">2017</td>
 							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=2892328" target="_blank"><span class="text-primary">"Social or Financial Goals? Comparative Analysis of User Behaviors in Couchsurfing and Airbnb."</span></a>
+								<a href="https://dl.acm.org/citation.cfm?id=3053198" target="_blank">
+									<span class="text-primary">"Sensors Know Which Photos Are Memorable."</span></a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/chi2016_social.pdf" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI17_Memorability.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’16 Work-in-Progress)</em><br>
-								Jiwon Jung, Suski Yoon, SeungHyun Kim, <strong>Sangkeun Park</strong>, Kun-Pyo Lee, Uichin Lee.
-							</td>
-						</tr>
-						<tr>
-							<td class="year">2016</td>
-							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=2892432" target="_blank"><span class="text-primary">“SlideQA: Supporting Effective Q&A in an Offline Academic Presentation."</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/chi2016_slideqa.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>Proceedings of the SIGCHI Conference on	Human Factors in Computing Systems (CHI ’16 Work-in-Progress)</em><br>
-								Juyoun Kim, Yoochan Kim, <strong>Sangkeun Park</strong>, Uichin	Lee.
+								<em>Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems (CHI ’17  Works-in-Progress)</em><br>
+								Soyoung Kim, Kalenzi Asio Evelyn Patra, <strong>Auk Kim</strong>, Kun-Pyo Lee, Aviv Segev, Uichin Lee.
 							</td>
 						</tr>
 					</tbody>
@@ -314,39 +323,15 @@
 				<table class="table table-hover">
 					<tbody>
 						<tr>
-							<td class="year">2016</td>
-							<td class="publication">
-								<a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE06645299" target="_blank"><span class="text-primary">On Campus Dashcam Video Sharing Support System Design for Security Enhancement</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/hcik2016_dashcam.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>HCIK 2016 (Extended Abstract)</em><br>
-								Juhyun Kim, <strong>Sangkeun Park</strong>, Uichin Lee, Rabeb Mizouni.
-							</td>
-						</tr>
-						<tr>
-							<td class="year">2015</td>
-							<td class="publication">
-								<a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE06139503" target="_blank"><span class="text-primary" style="letter-spacing:-0.2px;">Analysis of Graduate Students’ Research Related Q&A Behavior in Campus with Activity Theory, and its System Design Implications</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/hcik2015_research.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>HCIK 2015 (Extended Abstract)</em><br>
-								Taehwa Oh, <strong>Sangkeun Park</strong>, Uichin Lee, Wanchul Yoon.
-							</td>
-						</tr>
-						<tr>
 							<td class="year">2014</td>
 							<td class="publication">
-								<a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE06228673" target="_blank"><span class="text-primary">Word Sense Disambiguation using Dynamic Sized Window and Frequency Weighting</span></a>
+								<a><span class="text-primary">Maintaining Optimal Difficulty in Video Lecture through Real-Time Physiological Feedback.</span></a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/kiise2014_wordsense.pdf" role="button" target="_blank">PDF</a>
+									<a>PDF</a>
 								</span>
 								<br>
-								<em>KCC 2014</em><br>
-								<strong>Sangkeun Park</strong>, Jeeyeon Choi, Key-Sun Choi.
+								<em>Conference of the Society of e-Learning (SELCon) 2014</em><br>
+								<strong>Auk Kim</strong>, Jinwoo Lee, Gahgene Gweon
 							</td>
 						</tr>
 					</tbody>
