--- a/index.html
+++ b/index.html
@@ -102,65 +102,6 @@
 		<!-- End of bs-docs-section -->
 
 		<div class="bs-docs-section">
-			<div class="menu_template" id="menu_aboutme">
-				<h5>EDUCATION</h5>
-				<ul>
-					<li>2014 - now. PhD Candidate in Knowledge Service Engineering, KAIST, South Korea. </li>
-					<li>2012. 02 - 2014. 02. MS in Knowledge Service Engineering, KAIST, South Korea.</li>
-					<li>2004. 02 - 2012. 02. BS in Computer Science (Graduated with the highest honor), Gyeongsang National University, South Korea
-						<ul>
-							<li>2005. 04 - 2007. 04. The South Korea Military (discharged as a sergeant)</li>
-						</ul>
-					</li>
-				</ul>
-				<br>
-				<h5>ACADEMIC VOLUNTEERING</h5>
-				<p>I have volunteered to several research communities over the
-					years as follows:</p>
-				<ul>
-					<li>Web Chair of <a href="http://sigchi.kr/" target="_blank">ACM SIGCHI Local Chapter Korea</a> (2018 - present)</li>
-					<li>Program Committee
-						<ul>
-							<li>ACM GROUP 2020</li>
-						</ul>
-					</li>
-					<li>Reviewer
-						<ul>
-							<li>ACM UIST 2019</li>
-							<li>ACM/IEEE HRI 2019</li>
-							<li>ACM CHI 2019</li>
-							<li>ACM IMWUT(Ubicomp) 2018, 2019</li>
-							<li>ACM MobileHCI 2018, 2019</li>
-							<li>ACM CSCW 2018, 2019</li>
-							<li>ACM DIS 2018, 2019</li>
-						</ul>
-					</li>
-					<li>Student Volunteer
-						<ul>
-							<li>ACM MobileHCI 2014</li>
-						</ul>
-					</li>
-				</ul>
-				<br>
-				<h5>LEADERSHIP VOLUNTEERING</h5>
-				<p>I have led a couple of communities over the
-					years as follows:</p>
-				<ul>
-					<li>2017.03 - 2018.08. <em>A Student Representative of Hwaam Dormitory (for about 200 students),</em>,
-						<a href="https://kds.kaist.ac.kr/eng/council/index.do" target="_blank">Graduate Student Dormitory Council, KAIST</a>
-						<ul>
-							<li>Recognized as an outstanding student representative</li>
-						</ul>
-						</li>
-					<li>2014.03 - 2015.02. <em>A Student Representative of Graduate
-						School of Knowledge Service Engineering</em>, KAIST</li>
-				</ul>
-			</div>
-			<!-- End of menu_aboutme -->
-		</div>
-		<!-- End of bs-docs-section -->
-
-		<div class="bs-docs-section">
 			<div class="menu_template" id="menu_publication">
 				<p>* Google Scholar: <a href="https://scholar.google.co.kr/citations?user=sI0qT0MAAAAJ&hl=en" target="_blank">https://scholar.google.co.kr/citations?user=sI0qT0MAAAAJ&hl=en</a></p>
 				<br>
@@ -326,6 +267,9 @@
 							<td class="year">2014</td>
 							<td class="publication">
 								<a><span class="text-primary">Maintaining Optimal Difficulty in Video Lecture through Real-Time Physiological Feedback.</span></a>
+								<span style="float:right;">
+									<a>PDF</a>
+								</span>
 								<br>
 								<em>Conference of the Society of e-Learning (SELCon) 2014</em><br>
 								<strong>Auk Kim</strong>, Jinwoo Lee, Gahgene Gweon
