--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 						<blockquote class="blockquote text-right">
 							<p class="mb-0"></p>
-							<footer class="blockquote-footer">updated 16 Sep, 2019</footer>
+							<footer class="blockquote-footer">updated 13 Feb, 2020</footer>
 						</blockquote>
 					</div>
 				</div>
@@ -112,10 +112,10 @@
 						<tr>
 							<td class="year">2020</td>
 							<td class="publication">
-								<a href="" target="_blank">
+								<a href="./file/paper/IMWUT20_Interruptibility.pdf" target="_blank">
 									<span class="text-primary">"Interruptibility for In-vehicle Multitasking: Influence of Voice Task Workload and Adaptive Behaviors."</span></a>
 								<span style="float:right;">
-										<a class="btn btn-outline-info btn-sm" href="" role="button" target="_blank">PDF</a>
+										<a class="btn btn-outline-info btn-sm" href="./file/paper/IMWUT20_Interruptibility.pdf" role="button" target="_blank">PDF</a>
 									</span>
 								<br>
 								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 1 (Accepted, will published on March 2020). ACM</em><br>
