--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
 
 						<h5>RESEARCH INTEREST</h5>
 						<p>
-							I am currently a Ph.D student in <a href="http://ic.kaist.ac.kr/">Interactive Computing LAB</a> (Advisor: <a href="http://ic.kaist.ac.kr/wiki/wiki.cgi?UichinLee">Uichin Lee</a>) at <a href="http://www.kaist.ac.kr/html/en/index.html">KAIST</a>, South Korea.
-							While my research interests span across various areas of Human-Computer Interaction (HCI) and Ubiquitous Computing, currently, I am focusing in "Understanding and Designing Human Interactions with Artificial Intelligence Systems and Intelligent Vehicles".
+							I am a researcher in <a href="http://ic.kaist.ac.kr/">Interactive Computing LAB</a> (Advisor: <a href="http://ic.kaist.ac.kr/wiki/wiki.cgi?UichinLee">Uichin Lee</a>) at <a href="http://www.kaist.ac.kr/html/en/index.html">KAIST</a>, South Korea.
+							While my research interests span across various areas of Human-Computer Interaction (HCI) and Ubiquitous Computing, currently, I am focusing in "Understanding and Designing Human Interactions with Artificial Intelligence Systems".
+							I obtained my Ph.D. in the Department of Knowledge Service Engineering at KAIST in Feb, 2020.
 						</p>
 
 						<br>
