--- a/index.html
+++ b/index.html
@@ -167,9 +167,61 @@
 
 				<br>
 
-				<h5>REFEREED CONFERENCE PAPERS</h5>
+				<h5>REFEREED CONFERENCE PAPERS & POSTERS</h5>
 				<table class="table table-hover">
 					<tbody>
+					<tr>
+						<td class="year">2019</td>
+						<td class="publication">
+							<a href="https://dl.acm.org/citation.cfm?id=3343841" target="_blank">
+								<span class="text-primary">"Predicting Opportune Moments for In-vehicle Proactive Speech Services."</span></a>
+							<span style="float:right;">
+										<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp19_DriverInterruptibility.pdf" role="button" target="_blank">PDF</a>
+									</span>
+							<br>
+							<em>Proceedings of the 2019 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’19 Poster)</em><br>
+							<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee.
+						</td>
+					</tr>
+						<tr>
+							<td class="year">2019</td>
+							<td class="publication">
+								<a href="https://dl.acm.org/citation.cfm?id=3343841" target="_blank">
+									<span class="text-primary">"Predicting Opportune Moments for In-vehicle Proactive Speech Services."</span></a>
+								<span style="float:right;">
+										<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp19_DriverInterruptibility.pdf" role="button" target="_blank">PDF</a>
+									</span>
+								<br>
+								<em>Proceedings of the 2019 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’19 Poster)</em><br>
+								<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee.
+							</td>
+						</tr>
+						<tr>
+							<td class="year">2018</td>
+							<td class="publication">
+								<a href="https://dl.acm.org/citation.cfm?id=3267616" target="_blank">
+									<span class="text-primary">"HelloBot: Facilitating Social Inclusion with an Interactive Greeting Robot."</span></a>
+								<span style="float:right;">
+										<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp18_HelloBot.pdf" role="button" target="_blank">PDF</a>
+									</span>
+								<br>
+								<em>Proceedings of the 2018 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’18 Poster)</em><br>
+								Narae Cha, Inyeop Kim, Mingyu Park, <strong>Auk Kim</strong>, Uichin Lee.
+							</td>
+						</tr>
+						<tr>
+							<td class="year">2018</td>
+							<td class="publication">
+								<a href="https://dl.acm.org/citation.cfm?id=3267625" target="_blank">
+									<span class="text-primary">"Understanding Customers' Interests in the Wild."</span></a>
+								<span style="float:right;">
+										<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp18_CustomerInterest.pdf" role="button" target="_blank">PDF</a>
+									</span>
+								<br>
+								<em>Proceedings of the 2018 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’18 Poster)</em><br>
+								Soowon Kang, <strong>Auk Kim</strong>, Jemin Lee, Ikhee Shin, Uichin Lee.
+							</td>
+						</tr>
 						<tr>
 							<td class="year">2017</td>
 							<td class="publication">
@@ -181,6 +233,32 @@
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’17)</em><br>
 								<strong>Auk Kim</strong>, Sungjoon Kang, Uichin Lee.
+							</td>
+						</tr>
+						<tr>
+							<td class="year">2017</td>
+							<td class="publication">
+								<a href="https://dl.acm.org/citation.cfm?id=3053199" target="_blank">
+									<span class="text-primary">"It's More than Just Sharing Game Play Videos! Understanding User Motives in Mobile Game Social Media."</span></a>
+								<span style="float:right;">
+										<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI17_GameDuck.pdf" role="button" target="_blank">PDF</a>
+									</span>
+								<br>
+								<em>Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems (CHI ’17  Works-in-Progress)</em><br>
+								Hayun Kim, Lebogang Wame Molefi, <strong>Auk Kim</strong>, Woontack Woo, Aviv Segev, Uichin Lee.
+							</td>
+						</tr>
+						<tr>
+							<td class="year">2017</td>
+							<td class="publication">
+								<a href="https://dl.acm.org/citation.cfm?id=3053198" target="_blank">
+									<span class="text-primary">"Sensors Know Which Photos Are Memorable."</span></a>
+								<span style="float:right;">
+										<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI17_Memorability.pdf" role="button" target="_blank">PDF</a>
+									</span>
+								<br>
+								<em>Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems (CHI ’17  Works-in-Progress)</em><br>
+								Soyoung Kim, Kalenzi Asio Evelyn Patra, <strong>Auk Kim</strong>, Kun-Pyo Lee, Aviv Segev, Uichin Lee.
 							</td>
 						</tr>
 						<tr>
@@ -196,86 +274,6 @@
 								<strong>Auk Kim</strong>, Gahgene Gweon.
 							</td>
 						</tr>
-					</tbody>
-				</table>
-
-				<br>
-				<h5>REFEREED POSTERS & EXTENDED ABSTRACTS</h5>
-				<table class="table table-hover">
-					<tbody>
-						<tr>
-							<td class="year">2019</td>
-							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3343841" target="_blank">
-									<span class="text-primary">"Predicting Opportune Moments for In-vehicle Proactive Speech Services."</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp19_DriverInterruptibility.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>Proceedings of the 2019 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’19 Poster)</em><br>
-								<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee.
-							</td>
-						</tr>
-						<tr>
-							<td class="year">2018</td>
-							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3267616" target="_blank">
-									<span class="text-primary">"HelloBot: Facilitating Social Inclusion with an Interactive Greeting Robot."</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp18_HelloBot.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>Proceedings of the 2018 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’18 Poster)</em><br>
-								Narae Cha, Inyeop Kim, Mingyu Park, <strong>Auk Kim</strong>, Uichin Lee.
-							</td>
-						</tr>
-						<tr>
-							<td class="year">2018</td>
-							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3267625" target="_blank">
-									<span class="text-primary">"Understanding Customers' Interests in the Wild."</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/UbiComp18_CustomerInterest.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>Proceedings of the 2018 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’18 Poster)</em><br>
-								Soowon Kang, <strong>Auk Kim</strong>, Jemin Lee, Ikhee Shin, Uichin Lee.
-							</td>
-						</tr>
-						<tr>
-							<td class="year">2017</td>
-							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3053199" target="_blank">
-									<span class="text-primary">"It's More than Just Sharing Game Play Videos! Understanding User Motives in Mobile Game Social Media."</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI17_GameDuck.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems (CHI ’17  Works-in-Progress)</em><br>
-								Hayun Kim, Lebogang Wame Molefi, <strong>Auk Kim</strong>, Woontack Woo, Aviv Segev, Uichin Lee.
-							</td>
-						</tr>
-						<tr>
-							<td class="year">2017</td>
-							<td class="publication">
-								<a href="https://dl.acm.org/citation.cfm?id=3053198" target="_blank">
-									<span class="text-primary">"Sensors Know Which Photos Are Memorable."</span></a>
-								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI17_Memorability.pdf" role="button" target="_blank">PDF</a>
-								</span>
-								<br>
-								<em>Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems (CHI ’17  Works-in-Progress)</em><br>
-								Soyoung Kim, Kalenzi Asio Evelyn Patra, <strong>Auk Kim</strong>, Kun-Pyo Lee, Aviv Segev, Uichin Lee.
-							</td>
-						</tr>
-					</tbody>
-				</table>
-
-				<br>
-
-				<h5>DOMESTIC PAPERS (KOREAN)</h5>
-				<table class="table table-hover">
-					<tbody>
 						<tr>
 							<td class="year">2014</td>
 							<td class="publication">
