--- a/index.html
+++ b/index.html
@@ -113,7 +113,20 @@
 						<tr>
 							<td class="year">2020</td>
 							<td class="publication">
-								<a href="./file/paper/IMWUT20_Interruptibility.pdf" target="_blank">
+								<a href="https://www.frontiersin.org/articles/10.3389/fpubh.2020.00305/full" target="_blank">
+									<span class="text-primary">"Too Much Information: Assessing Privacy Risks of Contact Trace Data Disclosure on People With COVID-19 in South Korea."</span></a>
+								<span style="float:right;">
+											<a class="btn btn-outline-info btn-sm" href="./file/paper/FontierPublicHealth20_privacy.pdf" role="button" target="_blank">PDF</a>
+										</span>
+								<br>
+								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 1 (Accepted, will published on March 2020). ACM</em><br>
+								Gyuwon Jung, Hyunsoo Lee, <strong>Auk Kim</strong>, Uichin Lee.
+							</td>
+						</tr>
+						<tr>
+							<td class="year">2020</td>
+							<td class="publication">
+								<a href="https://dl.acm.org/doi/abs/10.1145/3381009" target="_blank">
 									<span class="text-primary">"Interruptibility for In-vehicle Multitasking: Influence of Voice Task Workload and Adaptive Behaviors."</span></a>
 								<span style="float:right;">
 										<a class="btn btn-outline-info btn-sm" href="./file/paper/IMWUT20_Interruptibility.pdf" role="button" target="_blank">PDF</a>
