--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 		<div class="bs-docs-section">
 			<div class="menu_template" id="menu_publication">
 				<p>* Google Scholar: <a href="https://scholar.google.co.kr/citations?user=sI0qT0MAAAAJ&hl=en" target="_blank">https://scholar.google.co.kr/citations?user=sI0qT0MAAAAJ&hl=en</a></p>
+
+				<br>
+				<p> Corresponding Author +</p>
 				<br>
 
 				<h5>REFEREED JOURNAL ARTICLES</h5>
@@ -120,7 +123,7 @@
 										</span>
 								<br>
 								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 1 (Accepted, will published on March 2020). ACM</em><br>
-								Gyuwon Jung, Hyunsoo Lee, <strong>Auk Kim</strong>, Uichin Lee.
+								Gyuwon Jung, Hyunsoo Lee, <strong>Auk Kim +</strong>, Uichin Lee +.
 							</td>
 						</tr>
 						<tr>
@@ -133,7 +136,7 @@
 									</span>
 								<br>
 								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 1 (Accepted, will published on March 2020). ACM</em><br>
-								<strong>Auk Kim</strong>, Jungmi Park, Uichin Lee.
+								<strong>Auk Kim</strong>, Jungmi Park, Uichin Lee +.
 							</td>
 						</tr>
 						<tr>
@@ -146,7 +149,7 @@
 								</span>
 								<br>
 								<em>Computers & Education, Volume 139, 1-15 (October 2019). Pergamon</em><br>
-								Juneyoung Park, Seunghyun Kim, <strong>Auk Kim</strong>, Mun Y. Yi.
+								Juneyoung Park, Seunghyun Kim, <strong>Auk Kim</strong>, Mun Y. Yi +.
 							</td>
 						</tr>
 						<tr>
@@ -159,7 +162,7 @@
 								</span>
 								<br>
 								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 2, Issue 4 (December 2018). ACM</em><br>
-								<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee.
+								<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee +.
 							</td>
 						</tr>
 						<tr>
@@ -172,7 +175,7 @@
 								</span>
 								<br>
 								<em>Computers in Human Behavior, Volume 62 (September 2016). ACM</em><br>
-								<strong>Auk Kim</strong>, Gahgene Gweon.
+								<strong>Auk Kim</strong>, Gahgene Gweon +.
 							</td>
 						</tr>
 					</tbody>
@@ -193,7 +196,7 @@
 									</span>
 								<br>
 								<em>Proceedings of the 2019 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’19 Poster)</em><br>
-								<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee.
+								<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee +.
 							</td>
 						</tr>
 						<tr>
@@ -206,7 +209,7 @@
 									</span>
 								<br>
 								<em>Proceedings of the 2018 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’18 Poster)</em><br>
-								Narae Cha, Inyeop Kim, Mingyu Park, <strong>Auk Kim</strong>, Uichin Lee.
+								Narae Cha, Inyeop Kim, Mingyu Park, <strong>Auk Kim</strong>, Uichin Lee +.
 							</td>
 						</tr>
 						<tr>
@@ -219,7 +222,7 @@
 									</span>
 								<br>
 								<em>Proceedings of the 2018 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’18 Poster)</em><br>
-								Soowon Kang, <strong>Auk Kim</strong>, Jemin Lee, Ikhee Shin, Uichin Lee.
+								Soowon Kang, <strong>Auk Kim</strong>, Jemin Lee, Ikhee Shin, Uichin Lee +.
 							</td>
 						</tr>
 						<tr>
@@ -232,7 +235,7 @@
 								</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’17)</em><br>
-								<strong>Auk Kim</strong>, Sungjoon Kang, Uichin Lee.
+								<strong>Auk Kim</strong>, Sungjoon Kang, Uichin Lee +.
 							</td>
 						</tr>
 						<tr>
@@ -245,7 +248,7 @@
 									</span>
 								<br>
 								<em>Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems (CHI ’17  Works-in-Progress)</em><br>
-								Hayun Kim, Lebogang Wame Molefi, <strong>Auk Kim</strong>, Woontack Woo, Aviv Segev, Uichin Lee.
+								Hayun Kim, Lebogang Wame Molefi, <strong>Auk Kim</strong>, Woontack Woo, Aviv Segev, Uichin Lee +.
 							</td>
 						</tr>
 						<tr>
@@ -258,7 +261,7 @@
 									</span>
 								<br>
 								<em>Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems (CHI ’17  Works-in-Progress)</em><br>
-								Soyoung Kim, Kalenzi Asio Evelyn Patra, <strong>Auk Kim</strong>, Kun-Pyo Lee, Aviv Segev, Uichin Lee.
+								Soyoung Kim, Kalenzi Asio Evelyn Patra, <strong>Auk Kim</strong>, Kun-Pyo Lee, Aviv Segev, Uichin Lee +.
 							</td>
 						</tr>
 						<tr>
@@ -271,7 +274,7 @@
 								</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’14)</em><br>
-								<strong>Auk Kim</strong>, Gahgene Gweon.
+								<strong>Auk Kim</strong>, Gahgene Gweon +.
 							</td>
 						</tr>
 						<tr>
@@ -283,7 +286,7 @@
 								</span>
 								<br>
 								<em>Conference of the Society of e-Learning (SELCon) 2014</em><br>
-								<strong>Auk Kim</strong>, Jinwoo Lee, Gahgene Gweon
+								<strong>Auk Kim</strong>, Jinwoo Lee, Gahgene Gweon +.
 							</td>
 						</tr>
 					</tbody>
@@ -292,18 +295,7 @@
 			<!-- End of menu_publication -->
 		</div>
 		<!-- End of bs-docs-section -->
-
-		<div class="bs-docs-section">
-			<div class="menu_template" id="menu_cv">
-				<h5>CALL FOR POSITIONS</h5>
-				<p>I am a sixth year PhD candidate. I am looking for job/post-doc opportunities</p>
-				<p>Now I already defended my PhD dissertation but the official graduation day will be August 2019.</p>
-				<p>You can see my up-to-date CV here: [<a href="https://docs.google.com/document/d/1C79ncWLDnGsbMo3gU2Zl1URrUhIdm8cIGw6t00lBx1c/edit?usp=sharing" target="_blank" >Google doc for my CV</a>]</p>
-				<p>Please feel free to contact me: <em>sk.park (at) kaist.ac.kr</em></p>
-			</div>
-			<!-- End of menu_cv -->
-		</div>
-		<!-- End of bs-docs-section -->
+		
 
 	</div>
 	<!-- End of container-->
