--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 											<a class="btn btn-outline-info btn-sm" href="./file/paper/FontierPublicHealth20_privacy.pdf" role="button" target="_blank">PDF</a>
 										</span>
 								<br>
-								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 1 (Accepted, will published on March 2020). ACM</em><br>
+								<em>Frontier Public Health, Volume 8 (June 2020). Frontier</em><br>
 								Gyuwon Jung, Hyunsoo Lee, <strong>Auk Kim +</strong>, Uichin Lee +.
 							</td>
 						</tr>
@@ -135,7 +135,7 @@
 										<a class="btn btn-outline-info btn-sm" href="./file/paper/IMWUT20_Interruptibility.pdf" role="button" target="_blank">PDF</a>
 									</span>
 								<br>
-								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 1 (Accepted, will published on March 2020). ACM</em><br>
+								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 1 (March 2020). ACM</em><br>
 								<strong>Auk Kim</strong>, Jungmi Park, Uichin Lee +.
 							</td>
 						</tr>
@@ -295,7 +295,7 @@
 			<!-- End of menu_publication -->
 		</div>
 		<!-- End of bs-docs-section -->
-		
+
 
 	</div>
 	<!-- End of container-->
