--- a/index.html
+++ b/index.html
@@ -116,6 +116,19 @@
 						<tr>
 							<td class="year">2020</td>
 							<td class="publication">
+								<a href="https://doi.org/10.1145/3411810" target="_blank">
+									<span class="text-primary">"“Hello There! Is Now a Good Time to Talk?”: Opportune Moments for Proactive Interactions with Smart Speakers."</span></a>
+								<span style="float:right;">
+												<a class="btn btn-outline-info btn-sm" href="./file/paper/IMWUT20_smartspeaker.pdf" role="button" target="_blank">PDF</a>
+											</span>
+								<br>
+								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 3 (September 2020). ACM</em><br>
+								Narae Cha, <strong>Auk Kim +</strong>, Cheul Young Park, Soowon Kang, Minkyu Park, Jae-Gil Lee, Sangsu Lee, and Uichin Lee +.
+							</td>
+						</tr>
+						<tr>
+							<td class="year">2020</td>
+							<td class="publication">
 								<a href="https://www.frontiersin.org/articles/10.3389/fpubh.2020.00305/full" target="_blank">
 									<span class="text-primary">"Too Much Information: Assessing Privacy Risks of Contact Trace Data Disclosure on People With COVID-19 in South Korea."</span></a>
 								<span style="float:right;">
