--- a/index.html
+++ b/index.html
@@ -116,11 +116,24 @@
 						<tr>
 							<td class="year">2020</td>
 							<td class="publication">
+								<a href="https://arxiv.org/pdf/2005.04120.pdf" target="_blank">
+									<span class="text-primary">"K-EmoCon, a multimodal sensor dataset for continuous emotion recognition in naturalistic conversationss."</span></a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="https://arxiv.org/pdf/2005.04120.pdf" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Scientific Data (to appear). Nature</em><br>
+								Cheul Young Park, Narae Cha, Soowon Kang, <strong>Auk Kim</strong>, Ahsan Habib Khandoker, Leontios Hadjileontiadis, Alice Oh, Yong Jeong, and Uichin Lee+.
+							</td>
+						</tr>
+						<tr>
+							<td class="year">2020</td>
+							<td class="publication">
 								<a href="https://doi.org/10.1145/3411810" target="_blank">
 									<span class="text-primary">"“Hello There! Is Now a Good Time to Talk?”: Opportune Moments for Proactive Interactions with Smart Speakers."</span></a>
 								<span style="float:right;">
-												<a class="btn btn-outline-info btn-sm" href="./file/paper/IMWUT20_smartspeaker.pdf" role="button" target="_blank">PDF</a>
-											</span>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/IMWUT20_smartspeaker.pdf" role="button" target="_blank">PDF</a>
+								</span>
 								<br>
 								<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 3 (September 2020). ACM</em><br>
 								Narae Cha, <strong>Auk Kim +</strong>, Cheul Young Park, Soowon Kang, Minkyu Park, Jae-Gil Lee, Sangsu Lee, and Uichin Lee +.
