--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
 						<h5>RESEARCH INTEREST</h5>
 						<p>
-							I am a researcher in <a href="http://ic.kaist.ac.kr/">Interactive Computing LAB</a> (Advisor: <a href="http://ic.kaist.ac.kr/wiki/wiki.cgi?UichinLee">Uichin Lee</a>) at <a href="http://www.kaist.ac.kr/html/en/index.html">KAIST</a>, South Korea.
+							I am a assistant professor in the <a href="https://cse.kangwon.ac.kr/" target="_blank">Department of Computer Science and Engineering</a> at <a href="https://www.kangwon.ac.kr/english/index.do" target="_blank">Kangwon national university</a>, South Korea.
+							I received the B.S. in computer science from University of Canterbury in 2011, the M.S. and Ph.D. degrees in knowledge service engineering from KAIST in 2014 and 2020, respectively. I continued my studies at KAIST as a post-doctoral research scientist (2020 Mar-Aug).
 							While my research interests span across various areas of Human-Computer Interaction (HCI) and Ubiquitous Computing, currently, I am focusing in "Understanding and Designing Human Interactions with Artificial Intelligence Systems".
-							I obtained my Ph.D. in the Department of Knowledge Service Engineering at KAIST in Feb, 2020.
 						</p>
 
 						<br>
@@ -93,7 +93,7 @@
 
 						<blockquote class="blockquote text-right">
 							<p class="mb-0"></p>
-							<footer class="blockquote-footer">updated 13 Feb, 2020</footer>
+							<footer class="blockquote-footer">updated 29 Sep, 2020</footer>
 						</blockquote>
 					</div>
 				</div>
@@ -122,7 +122,7 @@
 									<a class="btn btn-outline-info btn-sm" href="https://arxiv.org/pdf/2005.04120.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Scientific Data (to appear). Nature</em><br>
+								<em>Scientific Data. Nature</em><br>
 								Cheul Young Park, Narae Cha, Soowon Kang, <strong>Auk Kim</strong>, Ahsan Habib Khandoker, Leontios Hadjileontiadis, Alice Oh, Yong Jeong, and Uichin Lee+.
 							</td>
 						</tr>
