--- a/index.html
+++ b/index.html
@@ -213,6 +213,19 @@
 				<table class="table table-hover">
 					<tbody>
 						<tr>
+							<td class="year">2020</td>
+							<td class="publication">
+								<a href="./file/paper/ICTC20_FlowControl.pdf" target="_blank">
+									<span class="text-primary">"Towards Flow Control of Driver-Vehicle Interactions."</span></a>
+								<span style="float:right;">
+											<a class="btn btn-outline-info btn-sm" href="./file/paper/ICTC20_FlowControl.pdf" role="button" target="_blank">PDF</a>
+										</span>
+								<br>
+								<em>International Conference on ICT Convergence 2020 (ICTC '20 Recent Results)</em><br>
+								<strong>Auk Kim</strong>, Jungmi Park, Woohyeok Choi, Uichin Lee +.
+							</td>
+						</tr>
+						<tr>
 							<td class="year">2019</td>
 							<td class="publication">
 								<a href="https://dl.acm.org/citation.cfm?id=3343841" target="_blank">
